agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/c_api/cross_platform_c_api_wrapper.h

typedef unsigned int uid_t;
typedef void* view_t;
typedef void (*FUNC_OnChannelWarning)(const char* channelId, int warn, const char* msg);
typedef void (*FUNC_OnChannelError)(const char* channelId, int err, const char* msg);
typedef void (*FUNC_OnChannelJoinChannelSuccess)(const char* channelId, uid_t uid, int elapsed);
typedef void (*FUNC_OnChannelReJoinChannelSuccess)(const char* channelId, uid_t uid, int elapsed);
typedef void (*FUNC_OnChannelLeaveChannel)(const char* channelId, unsigned int duration, unsigned int txBytes, unsigned int rxBytes, unsigned int txAudioBytes, unsigned int txVideoBytes, unsigned int rxAudioBytes, unsigned int rxVideoBytes, unsigned short txKBitRate, unsigned short rxKBitRate, unsigned short rxAudioKBitRate, unsigned short txAudioKBitRate, unsigned short rxVideoKBitRate, unsigned short txVideoKBitRate, unsigned short lastmileDelay, unsigned short txPacketLossRate, unsigned short rxPacketLossRate, unsigned int userCount, double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio, int memoryAppUsageInKbytes);
typedef void (*FUNC_OnChannelClientRoleChanged)(const char* channelId, int oldRole, int newRole);
typedef void (*FUNC_OnChannelUserJoined)(const char* channelId, uid_t uid, int elapsed);
typedef void (*FUNC_OnChannelUserOffLine)(const char* channelId, uid_t uid, int reason);
typedef void (*FUNC_OnChannelConnectionLost)(const char* channelId);
typedef void (*FUNC_OnChannelRequestToken)(const char* channelId);
typedef void (*FUNC_OnChannelTokenPrivilegeWillExpire)(const char* channelId, const char* token);
typedef void (*FUNC_OnChannelRtcStats)(const char* channelId, unsigned int duration, unsigned int txBytes, unsigned int rxBytes, unsigned int txAudioBytes, unsigned int txVideoBytes, unsigned int rxAudioBytes, unsigned int rxVideoBytes, unsigned short txKBitRate, unsigned short rxKBitRate, unsigned short rxAudioKBitRate, unsigned short txAudioKBitRate, unsigned short rxVideoKBitRate, unsigned short txVideoKBitRate, unsigned short lastmileDelay, unsigned short txPacketLossRate, unsigned short rxPacketLossRate, unsigned int userCount, double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio, int memoryAppUsageInKbytes);
typedef void (*FUNC_OnChannelNetworkQuality)(const char* channelId, uid_t uid, int txQuality, int rxQuality);
typedef void (*FUNC_OnChannelRemoteVideoStats)(const char* channelId, uid_t uid, int delay, int width, int height, int receivedBitrate, int decoderOutputFrameRate, int rendererOutputFrameRate, int packetLossRate, int rxStreamType, int totalFrozenTime, int frozenRate, int totalActiveTime);
typedef void (*FUNC_OnChannelRemoteAudioStats)(const char* channelId, uid_t uid, int quality, int networkTransportDelay, int jitterBufferDelay, int audioLossRate, int numChannels, int receivedSampleRate, int receivedBitrate, int totalFrozenTime, int frozenRate, int totalActiveTime);
typedef void (*FUNC_OnChannelRemoteAudioStateChanged)(const char* channelId, uid_t uid, int state, int reason, int elapsed);
typedef void (*FUNC_OnChannelActiveSpeaker)(const char* channelId, uid_t uid);
typedef void (*FUNC_OnChannelVideoSizeChanged)(const char* channelId, uid_t uid, int width, int height, int rotation);
typedef void (*FUNC_OnChannelRemoteVideoStateChanged)(const char* channelId, uid_t uid, int state, int reason, int elapsed);
typedef void (*FUNC_OnChannelStreamMessage)(const char* channelId, uid_t uid, int streamId, const char* data, size_t length);
typedef void (*FUNC_OnChannelStreamMessageError)(const char* channelId, uid_t uid, int streamId, int code, int missed, int cached);
typedef void (*FUNC_OnChannelMediaRelayStateChanged2)(const char* channelId, int state, int code);
typedef void (*FUNC_OnChannelMediaRelayEvent2)(const char* channelId, int code);
typedef void (*FUNC_OnChannelRtmpStreamingStateChanged)(const char* channelId, const char* url, int state, int errCode);
typedef void (*FUNC_OnChannelTranscodingUpdated)(const char* channelId);
typedef void (*FUNC_OnChannelStreamInjectedStatus)(const char* channelId, const char* url, uid_t uid, int status);
typedef void (*FUNC_OnChannelRemoteSubscribeFallbackToAudioOnly)(const char* channelId, uid_t uid, BOOL isFallbackOrRecover);
typedef void (*FUNC_OnChannelConnectionStateChanged)(const char* channelId, int state, int reason);
typedef void (*FUNC_OnFacePositionChanged)(int imageWidth, int imageHeight, int x, int y, int width, int height, int vecDistance, int numFaces);
typedef void (*FUNC_OnChannelLocalPublishFallbackToAudioOnly)(const char* channelId, BOOL isFallbackOrRecover);
typedef void (*FUNC_OnChannelMediaRelayStateChanged)(int state, int code);
typedef void (*FUNC_OnChannelMediaRelayEvent)(int code);
typedef void (*FUNC_OnChannelTestEnd)(const char* channelId);
typedef void (*FUNC_OnJoinChannelSuccess)(const char*, uid_t uid, int elapsed);
typedef void (*FUNC_OnReJoinChannelSuccess)(const char*, uid_t uid, int elapsed);
typedef void (*FUNC_OnConnectionLost)();
typedef void (*FUNC_OnConnectionInterrupted)();
typedef void (*FUNC_OnLeaveChannel)(unsigned int duration, unsigned int txBytes, unsigned int rxBytes, unsigned int txAudioBytes, unsigned int txVideoBytes, unsigned int rxAudioBytes, unsigned int rxVideoBytes, unsigned short txKBitRate, unsigned short rxKBitRate, unsigned short rxAudioKBitRate, unsigned short txAudioKBitRate, unsigned short rxVideoKBitRate, unsigned short txVideoKBitRate, unsigned short lastmileDelay, unsigned short txPacketLossRate, unsigned short rxPacketLossRate, unsigned int userCount, double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio, int memoryAppUsageInKbytes);
typedef void (*FUNC_OnRequestToken)();
typedef void (*FUNC_OnUserJoined)(uid_t uid, int elapsed);
typedef void (*FUNC_OnUserOffline)(uid_t uid, int offLineReason);
typedef void (*FUNC_OnAudioVolumeIndication)(uid_t* uid, unsigned int* volume, unsigned int* vad, const char** channelId, int speakerNumber, int totalVolume);
typedef void (*FUNC_OnUserMuteAudio)(uid_t uid, BOOL muted);
typedef void (*FUNC_OnWarning)(int warn, const char* msg);
typedef void (*FUNC_OnError)(int error, const char* msg);
typedef void (*FUNC_OnRtcStats)(unsigned int duration, unsigned int txBytes, unsigned int rxBytes, unsigned int txAudioBytes, unsigned int txVideoBytes, unsigned int rxAudioBytes, unsigned int rxVideoBytes, unsigned short txKBitRate, unsigned short rxKBitRate, unsigned short rxAudioKBitRate, unsigned short txAudioKBitRate, unsigned short rxVideoKBitRate, unsigned short txVideoKBitRate, unsigned short lastmileDelay, unsigned short txPacketLossRate, unsigned short rxPacketLossRate, unsigned int userCount, double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio, int memoryAppUsageInKbytes);
typedef void (*FUNC_OnAudioMixingFinished)();
typedef void (*FUNC_OnAudioRouteChanged)(int route);
typedef void (*FUNC_OnFirstRemoteVideoDecoded)(uid_t uid, int width, int height, int elapsed);
typedef void (*FUNC_OnVideoSizeChanged)(uid_t uid, int width, int height, int elapsed);
typedef void (*FUNC_OnClientRoleChanged)(int oldRole, int newRole);
typedef void (*FUNC_OnUserMuteVideo)(uid_t uid, BOOL muted);
typedef void (*FUNC_OnMicrophoneEnabled)(BOOL isEnabled);
typedef void (*FUNC_OnChannelMediaRelayStateChanged)(int state, int code);
typedef void (*FUNC_OnChannelMediaRelayEvent)(int code);
typedef void (*FUNC_OnFacePositionChanged)(int imageWidth, int imageHeight, int x, int y, int width, int height, int vecDistance, int numFaces);
typedef void (*FUNC_OnChannelLocalPublishFallbackToAudioOnly)(const char* channelId, BOOL isFallbackOrRecover);
typedef void* IRtcEngineBridge_ptr;
typedef void* IRtcChannelBridge_ptr;
typedef void* IVideoDeviceManager_ptr;
typedef void* IAudioPlaybackDeviceManager_ptr;
typedef void* IAudioRecordingDeviceManager_ptr;