OneToOneVideo/OneToOneVideo/agorartc/AgoraRtcApiNative.cs

using System;
using System.Runtime.InteropServices;

namespace agorartc
{

    using uid_t = UInt32;
    using view_t = IntPtr;
    using IRtcEngineBridge_ptr = IntPtr;
    using IRtcChannelBridge_ptr = IntPtr;
    using IVideoDeviceManager_ptr = IntPtr;
    using IAudioPlaybackDeviceManager_ptr = IntPtr;
    using IAudioRecordingDeviceManager_ptr = IntPtr;
    
    
    interface AgoraDeviceManager
    {
        void OnAgoraDispose();
    }
    
    

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelWarning(string channelId, int warn, string msg);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelError(string channelId, int err, string msg);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelJoinChannelSuccess(string channelId, uint uid, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelReJoinChannelSuccess(string channelId, uint uid, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelLeaveChannel(string channelId, uint duration, uint txBytes, uint rxBytes,
        uint txAudioBytes, uint txVideoBytes, uint rxAudioBytes, uint rxVideoBytes, ushort txKBitRate,
        ushort rxKBitRate, ushort rxAudioKBitRate, ushort txAudioKBitRate, ushort rxVideoKBitRate,
        ushort txVideoKBitRate, ushort lastmileDelay, ushort txPacketLossRate, ushort rxPacketLossRate, uint userCount,
        double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio,
        double memoryTotalUsageRatio, int memoryAppUsageInKbytes);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelClientRoleChanged(string channelId, int oldRole, int newRole);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelUserJoined(string channelId, uint uid, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelUserOffLine(string channelId, uint uid, int reason);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelConnectionLost(string channelId);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelRequestToken(string channelId);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelTokenPrivilegeWillExpire(string channelId, string token);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelRtcStats(string channelId, uint duration, uint txBytes, uint rxBytes,
        uint txAudioBytes, uint txVideoBytes, uint rxAudioBytes, uint rxVideoBytes, ushort txKBitRate,
        ushort rxKBitRate, ushort rxAudioKBitRate, ushort txAudioKBitRate, ushort rxVideoKBitRate,
        ushort txVideoKBitRate, ushort lastmileDelay, ushort txPacketLossRate, ushort rxPacketLossRate, uint userCount,
        double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio,
        double memoryTotalUsageRatio, int memoryAppUsageInKbytes);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelNetworkQuality(string channelId, uint uid, int txQuality, int rxQuality);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelRemoteVideoStats(string channelId, uint uid, int delay, int width, int height,
        int receivedBitrate, int decoderOutputFrameRate, int rendererOutputFrameRate, int packetLossRate,
        int rxStreamType, int totalFrozenTime, int frozenRate, int totalActiveTime);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelRemoteAudioStats(string channelId, uint uid, int quality,
        int networkTransportDelay, int jitterBufferDelay, int audioLossRate, int numChannels, int receivedSampleRate,
        int receivedBitrate, int totalFrozenTime, int frozenRate, int totalActiveTime);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelRemoteAudioStateChanged(string channelId, uint uid, int state, int reason,
        int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelActiveSpeaker(string channelId, uint uid);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void
        FUNC_OnChannelVideoSizeChanged(string channelId, uint uid, int width, int height, int rotation);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelRemoteVideoStateChanged(string channelId, uint uid, int state, int reason,
        int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void
        FUNC_OnChannelStreamMessage(string channelId, uint uid, int streamId, string data, uint length);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelStreamMessageError(string channelId, uint uid, int streamId, int code,
        int missed, int cached);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelMediaRelayStateChanged2(string channelId, int state, int code);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelMediaRelayEvent2(string channelId, int code);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelRtmpStreamingStateChanged(string channelId, string url, int state, int errCode);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelTranscodingUpdated(string channelId);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelStreamInjectedStatus(string channelId, string url, uint uid, int status);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelRemoteSubscribeFallbackToAudioOnly(string channelId, uint uid,
        int isFallbackOrRecover);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelConnectionStateChanged(string channelId, int state, int reason);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnFacePositionChanged(int imageWidth, int imageHeight, int x, int y, int width,
        int height, int vecDistance, int numFaces);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelLocalPublishFallbackToAudioOnly(string channelId, int isFallbackOrRecover);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnChannelMediaRelayStateChanged(int state, int code);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnChannelMediaRelayEvent(int code);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnChannelTestEnd(string channelId);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnJoinChannelSuccess(string NamelessParameter1, uint uid, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnReJoinChannelSuccess(string NamelessParameter1, uint uid, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnConnectionLost();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnConnectionInterrupted();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnLeaveChannel(uint duration, uint txBytes, uint rxBytes, uint txAudioBytes,
        uint txVideoBytes, uint rxAudioBytes, uint rxVideoBytes, ushort txKBitRate, ushort rxKBitRate,
        ushort rxAudioKBitRate, ushort txAudioKBitRate, ushort rxVideoKBitRate, ushort txVideoKBitRate,
        ushort lastmileDelay, ushort txPacketLossRate, ushort rxPacketLossRate, uint userCount, double cpuAppUsage,
        double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio,
        int memoryAppUsageInKbytes);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRequestToken();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnUserJoined(uint uid, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnUserOffline(uint uid, int offLineReason);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnAudioVolumeIndication(IntPtr uid, IntPtr volume, IntPtr vad, string[] channelId,
        int speakerNumber, int totalVolume);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnUserMuteAudio(uint uid, int muted);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnWarning(int warn, string msg);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
    public delegate void FUNC_OnError(int error, string msg);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnRtcStats(uint duration, uint txBytes, uint rxBytes, uint txAudioBytes,
        uint txVideoBytes, uint rxAudioBytes, uint rxVideoBytes, ushort txKBitRate, ushort rxKBitRate,
        ushort rxAudioKBitRate, ushort txAudioKBitRate, ushort rxVideoKBitRate, ushort txVideoKBitRate,
        ushort lastmileDelay, ushort txPacketLossRate, ushort rxPacketLossRate, uint userCount, double cpuAppUsage,
        double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio,
        int memoryAppUsageInKbytes);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnAudioMixingFinished();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnAudioRouteChanged(int route);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnFirstRemoteVideoDecoded(uint uid, int width, int height, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnVideoSizeChanged(uint uid, int width, int height, int elapsed);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnClientRoleChanged(int oldRole, int newRole);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnUserMuteVideo(uint uid, int muted);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void FUNC_OnMicrophoneEnabled(int isEnabled);
